@@ -1,3 +1,13 @@
+2006-02-13  Michael Wybrow  <mjwybrow@users.sourceforge.net>
+
+	* src/graphlayout/graphlayout.cpp, src/conn-avoid-ref.cpp,
+	  src/conn-avoid-ref.h, src/libavoid/connector.cpp,
+	  src/libavoid/connector.h:
+	  
+	Change the behaviour and naming of some connector querying code
+	after feedback from Tim Dwyer in implementing graph drawing
+	functionality.
+
 2006-02-11  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* src/sp-conn-end-pair.cpp, src/conn-avoid-ref.cpp:
